# monocloud-cedar-dotnet

./: .editorconfig  .gitignore  CHANGELOG.md  Directory.Build.props  Directory.Packages.props  MonoCloud.Cedar.slnx  README.md  package.json  pnpm-lock.yaml
.changeset/: clean-lemons-jump.md  config.json  fuzzy-days-say.md  initial-release.md  silly-windows-dress.md
.github/: CODEOWNERS
.github/scripts/: update-version.sh
.github/workflows/: build.yml  nuget-publish.yaml  pr-snapshot.yaml  release.yaml
MonoCloud.Cedar/: AuthorizationEngine.cs  BasicAuthorizationEngine.cs  CedarJson.cs  ExperimentalAttribute.cs  ExperimentalFeature.cs  GlobalUsings.cs  MonoCloud.Cedar.csproj  README.nuget.md
MonoCloud.Cedar.BenchmarkTests/: AuthorizationBenchmark.cs  MonoCloud.Cedar.BenchmarkTests.csproj  Program.cs
MonoCloud.Cedar.FFI/: Cargo.toml
MonoCloud.Cedar.FFI/src/: helpers.rs  interface.rs  lib.rs  tests.rs
MonoCloud.Cedar.IntegrationTests/: MonoCloud.Cedar.IntegrationTests.csproj  SharedIntegrationTests.cs
MonoCloud.Cedar.UnitTests/: AuthTests.cs  ContextTests.cs  DateTimeTests.cs  DecimalTests.cs  DurationTests.cs  EntitiesTests.cs  EntityIdTests.cs  EntityTests.cs  EntityTypeNameTests.cs  EntityUIDTests.cs  EntityValidationTests.cs  JsonTests.cs  MonoCloud.Cedar.UnitTests.csproj  OffsetTests.cs  PolicyFormatterTests.cs  PolicySetTests.cs  PolicyTests.cs  SchemaTests.cs  TestUtil.cs  ValidationTests.cs
MonoCloud.Cedar/Formatter/: PolicyFormatter.cs
MonoCloud.Cedar/Interop/: CedarFfi.cs  CedarNativeLibrary.cs
MonoCloud.Cedar/Model/: AuthorizationRequest.cs  AuthorizationResponse.cs  AuthorizationSuccessResponse.cs  Context.cs  Effect.cs  (+10 more)
scripts/: Dockerfile.windows-arm64  build-runtimes.sh
(+34 files in other folders)
