[package]

name = "cedar-c-ffi"
license = "Apache-2.0"
description = "C FFI for Cedar (from the cedar-policy crate)."
edition = "2021"

version = "4.0.0"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "2.0"
itertools = "0.14"
miette = { version = "7.6.0", default-features = false }

[features]
default = ["partial-eval"]
partial-eval = ["cedar-policy/partial-eval"]

[dev-dependencies]
cool_asserts = "2.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[dependencies.cedar-policy]
version = "4.0.0"
git = "https://github.com/cedar-policy/cedar"
branch = "main"

[dependencies.cedar-policy-formatter]
version = "4.0.0"
git = "https://github.com/cedar-policy/cedar"
branch = "main"
